<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <AutoCompleteTextView
        android:id="@+id/tvLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:focusableInTouchMode="false"
        android:text="@string/language"
        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
        android:padding="1dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:weightSum="2">

        <!--<TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/app_name"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />-->

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:src="@drawable/omnical_logo" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/sd_input_style"
                android:padding="10dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/price"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:padding="1sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/sd_input_style"
                android:padding="10dp"
                android:theme="@style/TextLabel"
                android:visibility="visible">

                <EditText
                    android:id="@+id/etPriceWTaxHandling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/price_with_tax_handling"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:padding="1sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/sd_input_style"
                    android:padding="10dp"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/etMyDiscount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/myDiscount"
                        android:inputType="numberDecimal"
                        android:textStyle="bold"
                        android:padding="1sp"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/sd_input_style"
                    android:padding="10dp"
                    android:theme="@style/TextLabel"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/etMyPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/myPrice"
                        android:focusableInTouchMode="false"
                        android:textStyle="bold"
                        android:padding="1sp"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:background="@drawable/sd_input_style"
                android:padding="10dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/etPublicPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/publicPrice"
                    android:textStyle="bold"
                    android:padding="1sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:textSize="20dp"
                android:background="@drawable/bg_color"
                android:layout_marginTop="50dp"
                android:textColor="@android:color/white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textSize="20dp"
                android:background="@drawable/bg_color"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:textColor="@android:color/white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/myProfit"
                android:textStyle="bold"
                android:padding="1dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvMyProfit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="@drawable/sd_input_style"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp" />
        </LinearLayout>
    </ScrollView>
    </LinearLayout>

</ScrollView>